# bonsol_example

./: .gitignore  README.md  run.sh
client/: Cargo.toml
client/src/: main.rs
program/: Cargo.toml
program/src/: lib.rs
say_hello/: Cargo.toml  README.md  execution_request.json  manifest.json
say_hello/src/: main.rs
