[package]
name = "bonsol_example_client"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
solana-program = "~2"
bonsol-interface = { version = "0.4.5", features = [
  "on-chain",
], default-features = false }
solana-rpc-client = "~2"
bonsol-sdk = "0.4.5"
solana-client = "~2"
solana-program-test = "~2"
solana-sdk = "~2"
tokio = "1.45.1"
bonsol_example = { path = "../program" }
rand = "0.8.5"

[[bin]]
name = "bonsol_client"
path = "src/main.rs"
