[package]
name = "bonsol_example"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
solana-program = "~2"
bonsol-interface = { version = "0.4.5", features = ["on-chain"], default-features = false }
bonsol-schema = "0.4.5"
solana-pubkey = "2.4.0"

[dev-dependencies]
solana-program-test = "~2"
solana-sdk = "~2"
tokio = "1.45.1"

[lib]
crate-type = ["cdylib", "lib"]

