
[package]
name = "say_hello"
version = "0.1.0"
edition = "2021"

[package.metadata.zkprogram]
input_order = ["Public"]

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.1", default-features = false, features = [
	"std",
	"unstable"
] }
[dependencies.sha2]
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risczero.0"
